custom detail 수정

--- a/templates/custom.html
+++ b/templates/custom.html
@@ -23,13 +23,13 @@
     <section id="page-start"></section>
 
     <div id="content">
-        <h2>Custom your cake by your own</h2>
+        <h1>Custom your cake by your own</h1>
         <!-- button 색깔 바꾸기 -->
         <button type="button" id="start" class="btn" onclick="Start()">Start Now</button>
         <div id="middleArea">
             <div id="custom">
                 <div class="wrapper">
-                    <div class="circle"></div>
+                    <div id="circle"></div>
                 </div>
             </div>
             <div class="select">
@@ -105,6 +105,9 @@
                     <div class="col-sm-1"></div>
                 </div>
             </div>
+
+            <button id="submit" class="btn" onclick="submit()">Order</button>
+
         </div>
     
         <div id="footer">
