--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,7 +1,10 @@
 @import url(//fonts.googleapis.com/earlyaccess/kopubbatang.css);
 body { background-color: #F9F8EA; font-family: 'KoPub Batang', serif;}
-h2 {text-align: center; margin-top: 150px;}
+h1 { text-align: center; font-weight: bolder; margin-top: 300px;}
 #start { margin: 50px auto 200px 48%;}
+.go {
+    transform: (auto, 100px)/* 속성 추가할 부분 */
+  }
 #middleArea { display: flex; }
 #custom { 
     width: 350px; height: 350px; 
@@ -9,14 +12,15 @@ h2 {text-align: center; margin-top: 150px;}
     background-color: white; border: 1px solid rgb(98, 62, 39);
 }
 button {
+    margin: 10px 30px auto 30px;
     background-color: rgb(98, 62, 39);
     color: white;
 }
-.circle {
+#circle {
     margin: 0 auto;
     width: 300px;
     height: 300px;
-    border: 1px solid black;
+    border: 1px solid rgb(190, 188, 188);
     border-radius: 50%;
 }
 .wrapper {
@@ -26,10 +30,9 @@ button {
 }
 .select {
     width: 60%;
-    margin: 70px auto 100px 200px; 
+    margin: 50px auto 100px 200px; 
 
 }
-
 span {
     margin-right: 10px;
     height: 24px;
@@ -44,13 +47,11 @@ span {
 .check input[type=radio]+label{
     display: inline-block;
     cursor: pointer;
-    height: 24px;
-    width: 90px;
+    height: 24px;         width: 90px;
     border: 1px solid #dfdfdf;
     line-height: 24px;
     text-align: center;
-    font-weight:bold;
-    font-size:13px;
+    font-weight:bold;     font-size:13px;
     margin: 10px;
 }
 .check input[type=radio]+label{
@@ -63,12 +64,8 @@ span {
 }
 textarea {
     margin: 10px;
-    width: 400px;
+    width: 450px;
     height: 50px;
-}
-
-button {
-    margin: 10px 30px auto 30px;
 }
 
 .fruits {
@@ -76,7 +73,9 @@ button {
     text-align: center;
 }
 
-#footer {
-    display: block;
+.fruits button { margin-top: 150px;}
 
+#footer {
+    margin-top: 100px;
+    display: block;
 }
