--- a/templates/franchise.html
+++ b/templates/franchise.html
@@ -4,29 +4,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Francise</title>
-
-    <link rel="stylesheet" href="http://jiyugaoka.co.kr/css/content.css" />
     <link rel="stylesheet" href="../static/css/francise.css" />
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script>
       window.jQuery ||
         document.write(
           '<script src="http://jiyugaoka.co.kr/js/vendor/jquery-1.8.3.min.js"><\/script>'
         );
     </script>
-
-    <script src="http://jiyugaoka.co.kr/js/vendor/jquery.easing.1.3.js"></script>
-    <script src="http://jiyugaoka.co.kr/js/common.js"></script>
-    <script src="http://jiyugaoka.co.kr/js/layer_popup.js"></script>
-    <script src="http://jiyugaoka.co.kr/js/utile.js"></script>
-
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="http://jiyugaoka.co.kr/css/plugin/slick.css"
-    />
-    <script src="http://jiyugaoka.co.kr/js/plugin/slick.js"></script>
 
     <script>
       $(function () {
@@ -39,14 +24,6 @@
         }
       });
     </script>
-    <script
-      type="text/javascript"
-      src="http://jiyugaoka.co.kr/js/nav.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="http://jiyugaoka.co.kr/js/sub.js"
-    ></script>
 
     <link rel="stylesheet" href="../static/css/header.css" />
   </head>
@@ -62,37 +39,41 @@
             "
           ></div>
         </div>
+
         <div class="area visual-txt-con">
           <h2 class="visual-tit">FRANCHISE</h2>
           <p class="visual-sub-txt" style="transition-delay: 0.5s">
-            Debon의 프랜차이즈 개설절차 및 창업상담 등을 안내해드립니다
+            We will guide you through the procedures for opening a franchise for
+            Debon and counseling you on starting a business.
           </p>
         </div>
 
-        <aside class="pc-submenu-wrap">
+        <div class="pc-submenu-wrap">
           <div id="pcSubMenu">
             <div class="pc-sub-menu snb" style="float: left">
               <ul class="clearfix">
                 <li>
-                  <a href="franchise.html">창업 경쟁력</a>
+                  <a href="../templates/franchise.html">Competitiveness</a>
                 </li>
 
                 <li>
-                  <a href="../templates/PRRRRRR.html">창업상담</a>
+                  <a href="../templates/counseling.html">Counseling</a>
                 </li>
               </ul>
             </div>
           </div>
-        </aside>
+        </div>
       </section>
 
       <div id="middleArea">
-        <aside id="contentInfoCon">
-          <h3 class="content-tit" style="text-align: center">창업경쟁력</h3>
-        </aside>
+        <div id="contentInfoCon">
+          <h3 class="content-tit" style="text-align: center">
+            Entrepreneurial Competitiveness
+          </h3>
+        </div>
 
         <section id="content">
-          <article class="startup-content area">
+          <div class="startup-content area">
             <div class="startup-wrap startup-left startup-big-wrap clearfix">
               <div class="startup-img">
                 <img
@@ -106,21 +87,18 @@
                 <div class="startup-tit">
                   <span class="num">01</span>
                   <h3>
-                    기업형 프렌차이즈가 따라올 수 없는
-                    <span>차별화된 기술력 </span>
+                    <span>Differentiated technology </span>
+                    that corporate franchises can't keep up with
                   </h3>
                 </div>
                 <p class="line-txt">
-                  대기업이나 일반 프렌차이즈가 따라 올 수 없는 품질의 차별성과
-                  기술력 보유
+                  Has quality discrimination and technical capabilities that
+                  large companies and general franchises cannot keep up with
                 </p>
+
                 <p class="line-txt">
-                  국내 업계 최초 벤처기업 및 한국산업기술진흥협회 기업부설연구소
-                  설립 인증
-                </p>
-                <p class="line-txt">
-                  업계 최초 케이크 시트 제조 관련 특허 취득, 천연 유산균 스폰지
-                  발효공법, 각종 매스컴 소개 및 디저트 부문 콘테스트 수상
+                  Awarded the industry's first customized dessert design method,
+                  media introduction, and dessert development contest
                 </p>
               </div>
             </div>
@@ -131,17 +109,17 @@
               <div class="startup-info">
                 <div class="startup-tit">
                   <span class="num">02</span>
-                  <h3>글로벌 기업 제휴</h3>
+                  <h3>Domestic University Partnership</h3>
                 </div>
                 <p>
-                  Debon는 본사의 독보적인 기술력과<br />
-                  별화된 경쟁력을 인정받아 유수의 글로벌 기업과<br />
-                  제휴된 신뢰할 수 있는 회사입니다.
+                  Debon is a trusted company that has partnered with <br />
+                  leading domestic universities in recognition of <br />
+                  its unique technology and differentiated competitiveness.
                 </p>
                 <a
                   href="https://software.cbnu.ac.kr/"
                   class="startup-btn main-btn square-noshadow"
-                  >협력사 보러가기</a
+                  >University</a
                 >
               </div>
             </div>
@@ -152,12 +130,12 @@
               <div class="startup-info">
                 <div class="startup-tit">
                   <span class="num">03</span>
-                  <h3>자체 생산/유통/교육</h3>
+                  <h3>Self-production/Distribution/Education</h3>
                 </div>
                 <p>
-                  경쟁력 낮은 제품을 저가에 납품 받아 판매하는<br />일반
-                  프랜차이즈와 달리 Debon은 자체 생산라인과<br />유통망, 교육
-                  시스템을 갖추고 있는 디저트&베이커리 본사입니다.
+                  Debon is a dessert and bakery headquarters <br />
+                  with its own production line, distribution network, <br />
+                  and education system.
                 </p>
               </div>
             </div>
@@ -168,23 +146,25 @@
               <div class="startup-info">
                 <div class="startup-tit">
                   <span class="num">04</span>
-                  <h3>사업성/경쟁력/지속성</h3>
+                  <h3>Business/Competitive/Sustainability</h3>
                 </div>
                 <p class="line-txt">
-                  국내 시장에서 효용가치가 있는 사업인지 정확한 사업성 분석
-                  (직영점으로 테스트 완료)
+                  Accurate business feasibility analysis to see <br />
+                  if the business is of utility value in the domestic market
+                  (tested directly at the store)
                 </p>
                 <p class="line-txt">
-                  동종업종에서 우위에 설 수 있는 Debon만의 차별화된 경쟁력 확보
-                  (글로벌기업 인증)
+                  Debon's unique competitive edge that can dominate similar
+                  industries <br />
+                  (global corporate certification)
                 </p>
                 <p class="line-txt">
-                  2022년 오픈한 Debon의 첫 매장이 현재까지 성업, 유행을 타지않는
-                  지속성 연구 (노하우 제공)
+                  Debon's first store, which opened in 2022,
+                  <br />is currently conducting advanced service research
                 </p>
               </div>
             </div>
-          </article>
+          </div>
         </section>
       </div>
 
@@ -193,35 +173,23 @@
         <p>TOP</p>
       </a>
 
-      <article id="onlineRequest">
-        <form
-          action="http://jiyugaoka.co.kr/kr/include/online2_ok.php"
-          name="online_form"
-          method="post"
-          enctype="multipart/form-data"
-        >
+      <div id="onlineRequest">
+        <form name="online_form" method="post" enctype="multipart/form-data">
           <div class="online-request-btn">
-            <p>온라인창업문의</p>
-            <img
-              src="http://jiyugaoka.co.kr/images/button/open_arrow.png"
-              alt=""
-            />
+            <p>Online Start-up Inquiry</p>
+            <img src="../static/src/FrInquiry_btn1.png" alt="" />
           </div>
           <div class="online-request-info area">
             <div class="online-info clearfix">
               <div class="online-info-inner">
                 <dl>
-                  <dt>이름</dt>
+                  <dt>Name</dt>
                   <dd>
-                    <input
-                      type="text"
-                      name="name"
-                      placeholder="이름을 입력해주세요."
-                    />
+                    <input type="text" name="name" placeholder="Input name." />
                   </dd>
                 </dl>
                 <dl>
-                  <dt>연락처</dt>
+                  <dt>Contact information</dt>
                   <dd>
                     <input
                       type="text"
@@ -231,7 +199,7 @@
                   </dd>
                 </dl>
                 <dl>
-                  <dt>이메일</dt>
+                  <dt>E-mail</dt>
                   <dd>
                     <input
                       type="text"
@@ -243,37 +211,37 @@
               </div>
               <div class="online-info-inner">
                 <div class="online-memo">
-                  <p class="online-tit">문의내용</p>
+                  <p class="online-tit">Contact details</p>
                   <textarea
                     name="content"
                     id=""
                     cols="30"
-                    placeholder="(100자이내로 입력해주세요)"
+                    placeholder="(Please enter within 100 characters)"
                     maxlength="100"
                   ></textarea>
                 </div>
               </div>
             </div>
-            <a href="javascript:;" onClick="sendit2();">문의하기</a>
+            <a href="javascript:;" onClick="sendit2();">To inquire</a>
           </div>
         </form>
-      </article>
+      </div>
 
       <script type="text/javascript">
         var submit2 = false;
         function sendit2() {
           var f = document.online_form;
           if (f.name.value == "") {
-            alert("이름을 입력해 주세요.");
+            alert("Please enter a name.");
             f.name.focus();
           } else if (f.tel.value == "") {
-            alert("연락처를 입력해 주세요.");
+            alert("Please enter your contact information.");
             f.tel.focus();
           } else if (f.email.value == "") {
-            alert("이메일을 입력해 주세요.");
+            alert("Please enter an email.");
             f.email.focus();
           } else if (f.content.value == "") {
-            alert("문의내용을 입력해 주세요.");
+            alert("Please enter your inquiry.");
             f.content.focus();
           } else {
             if (!submit2) {
